--- a/CucumberAuto/pom.xml
+++ b/CucumberAuto/pom.xml
@@ -5,33 +5,7 @@
 	<groupId>CucumberAuto</groupId>
 	<artifactId>CucumberAuto</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<profiles>
-		<profile>
-			<id>integration-tests</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<parallel>none</parallel>
-							<threadCount>1</threadCount>
-							<disableXmlReport>true</disableXmlReport>
-						</configuration>
-						<executions>
-							<execution>
-								<id>Runnerclass</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -86,6 +60,17 @@
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.22.0</version>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <configuration>
+                    <includes>
+                        <include>**/CucumberRunner*.java</include>
+                    </includes>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
 		</plugins>
 	</reporting>
 	<build>
