--- a/CucumberAuto/pom.xml
+++ b/CucumberAuto/pom.xml
@@ -61,20 +61,23 @@
 				<version>2.22.0</version>
 			</plugin>
 			<plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
-                <configuration>
-                    <includes>
-                        <include>**/CucumberRunner*.java</include>
-                    </includes>
-                    <testFailureIgnore>true</testFailureIgnore>
-                </configuration>
-            </plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M4</version>
+				<configuration>
+					<includes>
+						<include>**/CucumberRunner*.java</include>
+					</includes>
+					<testFailureIgnore>true</testFailureIgnore>
+				</configuration>
+			</plugin>
 		</plugins>
 	</reporting>
+	<properties>
+		<baseFolder>${basedir}</baseFolder>
+	</properties>
 	<build>
-
+		<directory>${baseFolder}/target</directory>
 		<plugins>
 
 			<plugin>
@@ -86,7 +89,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 
 
