--- a/CucumberAuto/pom.xml
+++ b/CucumberAuto/pom.xml
@@ -59,19 +59,19 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
 				<version>2.22.0</version>
-				<configuration>
-					<outputDirectory>${basedir}/target/</outputDirectory>
-				</configuration>
+<!-- 				<configuration> -->
+<!-- 					<outputDirectory>${basedir}/target/</outputDirectory> -->
+<!-- 				</configuration> -->
 			</plugin>
 			<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
         <version>2.1</version>
-        <configuration>
+        <!-- <configuration>
           <outputDirectory>${basedir}/target/</outputDirectory>
-        </configuration>
+        </configuration> -->
       </plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M4</version>
@@ -81,14 +81,14 @@
 					</includes>
 					<testFailureIgnore>true</testFailureIgnore>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</reporting>
-	<properties>
+<!-- 	<properties>
 		<baseFolder>${basedir}</baseFolder>
-	</properties>
+	</properties> -->
 	<build>
-		<directory>${baseFolder}/target</directory>
+<!-- 		<directory>${baseFolder}/target</directory> -->
 		<plugins>
 
 			<plugin>
