--- a/CucumberAuto/pom.xml
+++ b/CucumberAuto/pom.xml
@@ -15,18 +15,35 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>1.2.5</version>
+			<version>1.2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-jvm-deps</artifactId>
+			<version>1.0.6</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>1.2.5</version>
+			<version>1.2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit-dep</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+<!-- 		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.2.0</version>
+		</dependency> -->
 		<dependency>
 			<groupId>com.vimalselvam</groupId>
 			<artifactId>cucumber-extentsreport</artifactId>
@@ -48,6 +65,17 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>2.22.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-sql</artifactId>
+			<version>3.0.3</version>
 		</dependency>
 
 
@@ -99,30 +127,13 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<!-- <plugin>
-				<groupId>net.masterthought</groupId>
-				<artifactId>maven-cucumber-reporting</artifactId>
-				<version>5.3.0</version>
-				<executions>
-					<execution>
-						<id>report</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/target</outputDirectory>
-							<jsonFiles>
-								<jsonFile>**/*.json</jsonFile>
-							</jsonFiles>
-							<mergeFeaturesWithRetest>true</mergeFeaturesWithRetest>
-							<mergeFeaturesById>true</mergeFeaturesById>
-							<checkBuildResult>false</checkBuildResult>
-							<skipEmptyJSONFiles>true</skipEmptyJSONFiles>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
+			<!-- <plugin> <groupId>net.masterthought</groupId> <artifactId>maven-cucumber-reporting</artifactId> 
+				<version>5.3.0</version> <executions> <execution> <id>report</id> <phase>integration-test</phase> 
+				<goals> <goal>generate</goal> </goals> <configuration> <outputDirectory>${project.build.directory}/target</outputDirectory> 
+				<jsonFiles> <jsonFile>**/*.json</jsonFile> </jsonFiles> <mergeFeaturesWithRetest>true</mergeFeaturesWithRetest> 
+				<mergeFeaturesById>true</mergeFeaturesById> <checkBuildResult>false</checkBuildResult> 
+				<skipEmptyJSONFiles>true</skipEmptyJSONFiles> </configuration> </execution> 
+				</executions> </plugin> -->
 
 		</plugins>
 
